--------------------------------------------------------------------------------
 Fusion 1.213 - August 29th, 2004
--------------------------------------------------------------------------------
- 09-22-04: Made Minamize to Tray a Windows OS only feature. [Tsusai]
- 09-22-04: Updated JCon's use of sockets to WSocket from WinSocket. [Tsusai]
- 09-22-04: Winsock isn't used in the http segment, commented out. [Tsusai]
- 09-21-04: Inability to resolve DNS caused freeze-crash. [AlexKreuz]
- 09-21-04: Cleaned up ISCS syntax. [AlexKreuz]
- 09-21-04: Moved ISCS Channel to #fusionservers. [AlexKreuz]
- 09-21-04: Removed weiss.ini LAN_IP field. Address retrieved automatically. [AlexKreuz]
- 09-21-04: Added Dynamic DNS support for WAN IP. [AlexKreuz]
- 09-20-04: Created Guild storage System. Added GSTORAGE GM Command (#gstorage). [AlexKreuz]
- 09-20-04: Restructured Kafra storage for more flexibility in the future. [AlexKreuz]
- 09-17-04: REED: Guild Storage structure (loading & saving) implemented. [AlexKreuz]
- 09-17-04: REED: Guilds, Diplomacy loading restructured. [AlexKreuz]
- 09-17-04: REED: Guilds, Banlist loading restructured. [AlexKreuz]
- 09-15-04: NPC inputstr framework code added. [Tsusai]
- 09-15-04: REED: Guilds, Skills loading restructured. [AlexKreuz]
- 09-15-04: Monster AI: Made marine sphere pimp. [Darkhelmet]
- 09-15-04: NPC Broadcast's options been redone. Inculdes global broadcast options. [Tsusai]
- 09-15-04: REED: Guilds, Positions loading restructured. [AlexKreuz]
- 09-15-04: REED: Parties, Member list loading first member only. [AlexKreuz]
- 09-15-04: REED: Guilds, Member loading restructured. [AlexKreuz]
- 09-15-04: REED: Guilds, Major restructure began. Foundation laid out. [AlexKreuz]
- 09-15-04: REED: Parties, Minor cleanup and fixes. [AlexKreuz]
- 09-15-04: REED: Parties. Added invalid directory type loading protection. [AlexKreuz]
- 09-15-04: REED: Major restructure to R.E.E.D Party Loading System. [AlexKreuz]