@@ -198,12 +198,10 @@ type
     ListBox2: TListBox;
     Label61: TLabel;
     Edit7: TEdit;
-    Edit8: TEdit;
     Edit9: TEdit;
     Edit10: TEdit;
     Label63: TLabel;
     Label64: TLabel;
-    Label65: TLabel;
     Label67: TLabel;
     Label62: TLabel;
     Label66: TLabel;
@@ -242,9 +240,7 @@ type
     Edit57: TEdit;
     Edit58: TEdit;
     Edit59: TEdit;
-    Edit60: TEdit;
     Edit61: TEdit;
-    Edit62: TEdit;
     Edit63: TEdit;
     Edit64: TEdit;
     Edit65: TEdit;
@@ -265,9 +261,11 @@ type
     Label92: TLabel;
     Label93: TLabel;
     Label94: TLabel;
-    Label95: TLabel;
-    Label96: TLabel;
     Button16: TButton;
+    Label65: TLabel;
+    Label97: TLabel;
+    Label98: TLabel;
+    Label99: TLabel;
 
 		procedure FormResize(Sender: TObject); overload;
 		procedure DBsaveTimerTimer(Sender: TObject);
@@ -364,7 +362,7 @@ type
     procedure ConnecttoISCS1Click(Sender: TObject);
     procedure EnableWebAccountCreator1Click(Sender: TObject);
     procedure Button16Click(Sender: TObject);
-    procedure Button17Click(Sender: TObject);
+    procedure ListBox2Click(Sender: TObject);
     	//procedure cbxPriorityChange(Sender: TObject);
 
 
@@ -11442,7 +11440,8 @@ begin
     end else if (TabSheet4.Showing) then begin
     	JCon_INI_Server_Load();
     end else if (TabSheet7.Showing) then begin
-        ShowMessage('Under Development, This section does not work.');
+        JCon_Characters_Load();
+        //ShowMessage('Under Development, This section does not work.');
     end;
 
 
@@ -11560,14 +11559,14 @@ begin
     end;
 end;
 
-procedure TfrmMain.Button16Click(Sender: TObject);
-    begin
-        //JCon_Character_Save()
-    end;
+procedure TfrmMain.ListBox2Click(Sender: TObject);
+begin
+    JCon_Characters_Populate();
+end;
 
-procedure TfrmMain.Button17Click(Sender: TObject);
-    begin
-        //JCon_Character_Save()
-    end;
+procedure TfrmMain.Button16Click(Sender: TObject);
+begin
+    JCon_Characters_Save();
+end;
 
 end.
